StarterSet/force-app/main/default/objects/BulletinBoard__c/BulletinBoard__c.object-meta.xml
<CustomObject>
    <label>掲示板</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{00000000}</displayFormat>
        <label>掲示板</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>