StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/BodyText__c.field-meta.xml
<CustomField>
    <fullName>BodyText__c</fullName>
    <label>本文</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>