StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/IsAllowExternalPublish__c.field-meta.xml
<CustomField>
    <fullName>IsAllowExternalPublish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>プロセスビルダーにて制御</description>
    <inlineHelpText>公開日を過ぎている AND 外部公開が許可されている場合 TRUE</inlineHelpText>
    <label>IsAllowExternalPublish</label>
    <type>Checkbox</type>
</CustomField>