StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/IsAllowInternalPublish__c.field-meta.xml
<CustomField>
    <fullName>IsAllowInternalPublish__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsAllowInternalPublish</label>
    <type>Checkbox</type>
</CustomField>