StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/IsExternalPublication__c.field-meta.xml
<CustomField>
    <fullName>IsExternalPublication__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>コミュニティユーザーに対して公開したい場合チェックを付ける</inlineHelpText>
    <label>外部公開</label>
    <type>Checkbox</type>
</CustomField>