StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/IsPublish__c.field-meta.xml
<CustomField>
    <fullName>IsPublish__c</fullName>
    <formula>IF(
    AND(
        NOW() &gt; PublishDate__c,
        IsExternalPublication__c
    ),
    TRUE,
    FALSE
)</formula>
    <inlineHelpText>公開日を過ぎている AND 外部公開が許可されている場合 TRUE</inlineHelpText>
    <label>IsPublish</label>
    <type>Checkbox</type>
</CustomField>