StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/NoticePostingPeriod__c.field-meta.xml
<CustomField>
    <fullName>NoticePostingPeriod__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>お知らせ掲載期間が過ぎたレコードはお知らせ画面に表示されなくなります。</inlineHelpText>
    <label>お知らせ掲載期間</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>