StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/PublicationOrder__c.field-meta.xml
<CustomField>
    <fullName>PublicationOrder__c</fullName>
    <defaultValue>99</defaultValue>
    <inlineHelpText>お知らせに表示される順を制御します。
お知らせの掲載順は、「掲載順」の次に「公開日」が評価されます。
(掲載順が同一で公開日が異なる場合、公開日が近いレコードが上位に表示される)</inlineHelpText>
    <label>掲載順</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>