StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/PublishDate__c.field-meta.xml
<CustomField>
    <fullName>PublishDate__c</fullName>
    <label>公開日</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>