StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>タグ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>ToDo</fullName>
            </value>
            <value>
                <fullName>カレンダー</fullName>
            </value>
            <value>
                <fullName>キャンペーン</fullName>
            </value>
            <value>
                <fullName>キャンペーンメンバー</fullName>
            </value>
            <value>
                <fullName>ケース</fullName>
            </value>
            <value>
                <fullName>コミュニティ</fullName>
            </value>
            <value>
                <fullName>ファイル</fullName>
            </value>
            <value>
                <fullName>プロファイル</fullName>
            </value>
            <value>
                <fullName>ホーム</fullName>
            </value>
            <value>
                <fullName>ユーザ</fullName>
            </value>
            <value>
                <fullName>リード</fullName>
            </value>
            <value>
                <fullName>活動</fullName>
            </value>
            <value>
                <fullName>契約</fullName>
            </value>
            <value>
                <fullName>権限セット</fullName>
            </value>
            <value>
                <fullName>行動</fullName>
            </value>
            <value>
                <fullName>取引先</fullName>
            </value>
            <value>
                <fullName>取引先責任者</fullName>
            </value>
            <value>
                <fullName>商談</fullName>
            </value>
            <value>
                <fullName>商品</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>