StarterSet/force-app/main/default/objects/BulletinBoard__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>種別</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>お知らせ</fullName>
            </value>
            <value>
                <fullName>機能紹介</fullName>
            </value>
            <value>
                <fullName>バージョンアップ</fullName>
            </value>
            <value>
                <fullName>メンテナンス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>