StarterSet/force-app/main/default/objects/BulletinBoard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>PublishDate__c</columns>
    <columns>IsExternalPublication__c</columns>
    <columns>NoticePostingPeriod__c</columns>
    <columns>PublicationOrder__c</columns>
    <columns>IsAllowInternalPublish__c</columns>
    <columns>IsAllowExternalPublish__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>